<resources>
    <string name="app_name">Al_Matger</string>
    <string name="mainpage">القسم</string>
    <string name="cancel">الغاء</string>
    <string name="open_permission">فتح</string>
    <string name="permission_text_cam">اعطاء الصلاحية لفتح الصور</string>
    <string name="notselect">لم يتم تحديد الصور</string>
    <string name="error">خطا في تحميل الصور</string>
    <string name="complet">ادخل حجم منتج صحيح</string>
    <string name="addcolortoproduct">اضافة الوان للمنتج</string>
    <string name="addsizesrtoproduct">اضاقة احجام للمنتج</string>
    <string name="code">الكود الخاص بالمشاهير : </string>
    <string name="banky">تحويل بنكي</string>
    <string name="card">بطاقة ائتمانية</string>
    <string name="orderdetails">تفاصيل الطلبات</string>
    <string name="deliveryname">اسم الكابتن : </string>
    <string name="deliveryoffers">عروض المناديب</string>
    <string name="deliveryoffers5">عروض المناديب</string>
    <string name="product_name">هاتف اونر 7 سي</string>
    <string name="satisfied">الي اي مدي انت راضي</string>
    <string name="writecomment">اكتب تعليقك</string>
    <string name="sendrate">ارســــل</string>
    <string name="prductrate">تقييم المنتج</string>
    <string name="storename">اسم المتجر</string>
    <string name="storeplace">مكان المتجر</string>
    <string name="clientname">اسم العميل</string>
    <string name="productname">اسم المنتج</string>
    <string name="productprice">سعر المنتج</string>
    <string name="paymentway">وسيلة الدفع</string>
    <string name="accept">قبول</string>
    <string name="refuse">رفض</string>
    <string name="neworder">طلب جديد</string>
    <string name="google_maps_key">AIzaSyDFi45bBEn44Oh7dNIryAZ5FBvEnKPqrz0</string>
    <string name="setting">الاعدادات</string>
    <string name="get_deliveryvalue">تحصيل قيمة التوصيل</string>
    <string name="enablecopon">تفعيل كوبونات التخفيض</string>
    <string name="discounttext">تفعيل التخفيضات</string>
    <string name="minorder">الحد الادني للطلب</string>
    <string name="taxpercentage">نسبة الضريبة</string>
    <string name="storedepart">قسم المتجر :</string>
    <string name="changestorename">تغيير اسم المتجر</string>
    <string name="copycode">تم نسخ الكود</string>
    <string name="changestoredepart">تغيير قسم المتجر</string>
    <string name="delivery_name">اسم المندوب : </string>
    <string name="product_name_in_chat">اسم المنتج : </string>
    <string name="mychat">محادثاتي</string>
    <string name="photographer"> المصور : </string>
    <string name="img_num">عدد الصور : </string>
    <string name="chat">مراسلة</string>
    <string name="photo_comments">تعليقات المصور</string>
    <string name="nearphotographer">المصورين الاقرب</string>
    <string name="photographerdetails">تفاصيل المصور</string>
    <string name="comment">تعليقات</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>
