<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include  layout="@layout/header_for_product_rate"/>

        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/doctot_rateimg"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="200dp"
            android:src="@drawable/mobile"
            />

        <TextView
            android:id="@+id/rate_productname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/product_name"
            android:textSize="16dp"/>


        <TextView
            android:id="@+id/rate_ordernum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="طلب رقم : 155 "
            android:textSize="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/satisfied"
            android:textSize="15dp" />

        <RatingBar
            android:id="@+id/ratebare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:rating="4"
            android:theme="@style/RatingBar"
            android:numStars="5"/>


        <EditText
            android:id="@+id/ratecomment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:hint="@string/writecomment"/>

        <Button
            android:id="@+id/ratesend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/sendrate"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:onClick="sendfedback"
            android:textColor="@color/white"
            android:background="@drawable/btn_borderrate"/>
    </LinearLayout>
</ScrollView>
