
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
       <include layout="@layout/header_for_photographer_details"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/linear_background_for_photographer"
                android:weightSum="5"
                android:layoutDirection="rtl"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:layout_weight="2.2">


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="95dp"
                            android:padding="5dp"
                            android:layout_marginTop="5dp"
                            android:scaleType="fitXY"
                            android:layout_gravity="center"
                            android:src="@drawable/camera"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/ratlin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RatingBar
                            android:id="@+id/rates"
                            style="@style/StarRatingBars"
                            android:layout_width="wrap_content"
                            android:layout_height="15dp"
                            android:rating="5"
                            android:isIndicator="true"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            android:gravity="center"
                            android:text="("
                            android:textSize="11dp"
                            android:textColor="@color/gray" />

                        <TextView
                            android:id="@+id/customer_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="11dp"
                            android:text="122"
                            android:textColor="@color/gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text=")"
                            android:textSize="11dp"
                            android:textColor="@color/gray" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="12dp"
                        android:textColor="#4A4A4A"
                        android:autoLink="all"
                        android:layout_marginBottom="2dp"
                        android:clickable="true"
                        android:layout_marginRight="2dp"
                        android:text="@string/photo_comments"
                        />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#D9D9D9"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.8"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="1dp"
                            android:textSize="14sp"
                            android:textColor="#4A4A4A"
                            android:text="@string/photographer"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="1dp"
                            android:textSize="14sp"
                            android:textColor="#4A4A4A"
                            android:text="أحمد زكريا عبدالتواب"
                            />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="2dp"
                        android:maxLines="3"
                        android:textSize="12dp"
                        android:textColor="@color/gray"
                        android:layout_marginRight="2dp"
                        android:text="نبذة عن المصور نبذة عن المصور نبذة عن المصور نبذة عن المصور نبذة عن المصور نبذة عن المصورنبذة عن المصورنبذة عن المصورنبذة عن المصورنبذة عن المصورنبذة عن المصورنبذة عن المصورنبذة عن المصور"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="35dp"
                        android:background="#D9D9D9"/>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layoutDirection="rtl"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="0.3"
                                android:text="@string/img_num"
                                android:gravity="start"
                                android:textColor="#969696"
                                android:textSize="13dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="450"
                                android:padding="2dp"
                                android:gravity="start"
                                android:textColor="@color/red"
                                android:textSize="13dp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="25dp"
                            android:text="@string/chat"
                            android:lines="1"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginBottom="5dp"
                            android:textColor="@color/white"
                            android:layout_gravity="center|bottom"
                            android:background="@drawable/accept_background"
                            android:paddingRight="12dp"
                            android:paddingLeft="12dp"
                            />
                    </android.support.constraint.ConstraintLayout>




                </LinearLayout>
            </LinearLayout>

        <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:id="@+id/recylerview">

    </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    </ScrollView>

</RelativeLayout>
